# kindle_manga_reader_v2

./: .gitignore  Cargo.toml  README.md  example.json
assets/templates/v3/: content.opf
src/: ascrii_art.rs  assets.rs  cart.rs  kindle.rs  lib.rs  main.rs  make_mobi.rs  manga.rs  que.rs  utils.rs
src/kindle/: mod.rs
src/make_mobi/: epub_builder.rs  epub_to_mobi.rs
src/make_mobi/epub_builder/: epub.rs  epub_content.rs  toc.rs  zip_command.rs  zip_command_or_library.rs  zip_library.rs
src/manga/: common.rs  manga_structs.rs  mod.rs
src/manga/make_mobi/: epub_to_mobi.rs  mod.rs
src/manga/make_mobi/epub_builder/: epub.rs  epub_content.rs  templates.rs  toc.rs  zip_command.rs  zip_command_or_library.rs  zip_library.rs
src/manga/make_mobi/templates/v2/: content.opf
templates/: cover.html  page.html
