[package]
name = "kindle_manga_reader_v2"
version = "0.1.0"
edition = "2021"


[features]
default = ["zip-command", "zip-library"]
zip-command = ["tempdir"]
zip-library = ["libzip"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.88"
image = "0.24.5"
natord = "1.0.9"
handlebars = "4.3.5"
eyre = "0.6.8"
mustache = "0.9"
once_cell = "1.13.1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tempdir = { version = "0.3", optional = true } 
libzip = { version = "0.6", optional = true, default-features = false, features = ["time"], package = "zip"} 
regex = "1"
html-escape = "0.2.6"
log = "0.4"
sysinfo = "0.26.8"