[package]
name = "kindle_manga_reader_v2"
version = "0.1.0"
edition = "2021"


[features]
default = ["zip-command", "zip-library"]
zip-command = ["tempdir"]
zip-library = ["libzip"]

[dependencies]
chrono = "0.4"
eyre = "0.6.8"
fast_image_resize = "2.3.0"
handlebars = "4.3.5"
html-escape = "0.2.6"
image = "0.24.5"
libzip = { version = "0.6", optional = true, default-features = false, features = ["time"], package = "zip"} 
log = "0.4"
mustache = "0.9"
once_cell = "1.13.1"
regex = "1.7.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
sysinfo = "0.26.8"
tempdir = { version = "0.3", optional = true } 
uuid = { version = "1", features = ["v4"] }